--- a/html/uesr_fund.html
+++ b/html/uesr_fund.html
@@ -14,24 +14,24 @@
   <!-- 导航开始 -->
   <div id="top">
         <div id="top_list" class="w_1100">
-            <a href="javascript:void(0)" class="login_in" onclick ="login();">登录</a>
-            <a href="javascript:void(0)" class="common_cf">大众理财</a>
+          <a href="javascript:void(0)" class="login_in" onclick ="login();">登录</a>
+          <a href="javascript:void(0)" class="common_cf">大众理财</a>
         </div>
   </div>
   <div id="header">
-      <div id="header_list" class="w_1100">
-          <div class="list_left">
-              <a href="index.html" class="logo_pic"><img src="../images/logo.jpg" alt="logo" /></a>
-              <span class="logo_name">嘉实财富</span>
-          </div>
-          <div class="list_right">
-              <ul class="list_item clearfix">
-                  <li class="bg-white"><a href="">顾问/工作室</a></li>
-                  <li><a href="product.html">产品投资</a></li>
-                  <li><a href="personal_information.html">个人首页</a></li>
-              </ul>
-          </div>
+    <div id="header_list" class="w_1100">
+      <div class="list_left">
+        <a href="index.html" class="logo_pic"><img src="../images/logo.jpg" alt="logo" /></a>
+        <span class="logo_name">嘉实财富</span>
       </div>
+      <div class="list_right">
+        <ul class="list_item clearfix">
+          <li class="bg-white"><a href="javascript:void(0);">顾问/工作室</a></li>
+          <li><a href="product.html">产品投资</a></li>
+          <li><a href="personal_information.html">个人首页</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
   <!-- 导航结束 -->
     <div id="model_001">
@@ -62,15 +62,15 @@
     </div>
   <!-- 底部开始 -->
   <div id="footer">
-      <div class="footer_list">
-          <div class="m_center">
-              <span><a href="about_us.html">关于我们</a></span>
-              <span><a href="contact_us.html">联系我们</a></span>
-              <span><a href="add_us.html">加盟我们</a></span>
-              <span><a href="user_feedback.html">用户反馈</a></span>
-          </div>
+    <div class="footer_list">
+      <div class="m_center">
+        <span><a href="about_us.html">关于我们</a></span>
+        <span><a href="contact_us.html">联系我们</a></span>
+        <span><a href="add_us.html">加盟我们</a></span>
+        <span><a href="user_feedback.html">用户反馈</a></span>
       </div>
-      <div class="bottom_title">&copy;2014&nbsp;&nbsp;neartrader京公网安备11010802012285号 | 京icp备12031756号-3</div>
+    </div>
+    <div class="bottom_title">&copy;2014&nbsp;&nbsp;neartrader京公网安备11010802012285号 | 京icp备12031756号-3</div>
   </div>
   <!-- 底部结束 -->
   <!--登录开始-->
@@ -80,39 +80,39 @@
                       <div class="close_pic" onclick="closeWindow01();">&Chi;</div>
                  </div>
                  <div class="center_main">
-                      <form action="">
-                          <div class="one_div clearfix">
-                              <span class="logoin">登录</span>
-                          </div>
-                          <div class="two_div common_c">
-                              <p class="p_style">账号：</p>
-                              <input type="text" id="user" class="input_test" value="昵称/手机号"/>
-                          </div>
-                          <div class="three_div common_c">
-                              <p class="p_style">密码：</p>
-                              <input type="password" id="password" value=""/>
-                          </div>
-                          <div class="four_div">
-                              <p><!-- *账号和密码不匹配，请重新输入 --></p>
-                          </div>
-                          <div class="five_div clearfix">
-                              <div class="l_f">
-                                <span>
-                                    <input type="radio" name="user" value=""/>
-                                    </span>
-                                    <span>投顾登录</span>
-                              </div>
-                            <div class="l_f user-login">
-                                <span>
-                                    <input type="radio" name="user" value="" checked="checked"/>
-                                </span>
-                                    <span>用户登录</span>
-                            </div>
-                          </div>
-                          <div class="six_div">
-                              <input type="button" name="" value="登录" id="charge"/>
-                          </div>
-                      </form>
+                   <form action="">
+                    <div class="one_div clearfix">
+                      <span class="logoin">登录</span>
+                    </div>
+                      <div class="two_div common_c">
+                        <p class="p_style">账号：</p>
+                        <input type="text" id="user" class="input_test" value="昵称/手机号"/>
+                      </div>
+                    <div class="three_div common_c">
+                      <p class="p_style">密码：</p>
+                        <input type="password" id="password" value=""/>
+                    </div>
+                    <div class="four_div">
+                      <p><!-- *账号和密码不匹配，请重新输入 --></p>
+                    </div>
+                    <div class="five_div clearfix">
+                      <div class="l_f">
+                        <span>
+                          <input type="radio" name="user" value=""/>
+                        </span>
+                          <span>投顾登录</span>
+                      </div>
+                      <div class="l_f user-login">
+                        <span>
+                          <input type="radio" name="user" value="" checked="checked"/>
+                        </span>
+                          <span>用户登录</span>
+                      </div>
+                    </div>
+                    <div class="six_div">
+                      <input type="button" name="" value="登录" id="charge"/>
+                    </div>
+                   </form>
                  </div>
             </div>
     </div>
